# my-rust

./: .gitignore  README.md
algorithm/src/: a_star.rs  dijkstra.rs  insert_sort.rs  main.rs  merge_sort.rs  prime_factors.rs
comprehensive-rust/: Cargo.toml  build.rs
comprehensive-rust/c_src/: c_init.c  text_analysis.c  text_analysis.h
comprehensive-rust/cpp_src/: interner.cpp  interner.h  interner.hpp
comprehensive-rust/src/: ffi_interner.rs  ffi_text_analysis.rs  lib.rs  main.rs
comprehensive-rust/tests/: async_test.rs  borrow_checker_test.rs  common_traits_test.rs  concurrency_test.rs  extend_traits_test.rs  ffi_string_interner.README  ffi_test.rs  ffi_text_analysis.README  polymorphism_test.rs  serializer_test.rs  token_types_test.rs  tty_test.rs  type_system_test.rs  unsafe_test.rs
criterion_bench/: Cargo.toml
criterion_bench/benches/: my_benchmark.rs
criterion_bench/src/: lib.rs  main.rs
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml  lorem_ipsum.txt  test_data.csv
hello_cargo/src/: arc_test.rs  channel-test.rs  child-await.rs  child-pipleline-test.rs  child-test.rs  doc-test.rs  doc.rs  ffi-test.rs  file-create-test.rs  file-open-test.rs  file-read-lines-test.rs  filesystem-operations-test.rs  index.js  lib.rs  libdoc.rlib  macro_test.rs  main.rs  map-reduce-test.rs  program-arguments-test.rs  rc_test.rs  thread_test.rs
hello_cargo/tests/: any_test.rs  anyhow_test.rs  arc_test.rs  ascent_test.rs  axum_test.rs  box_test.rs  channel-test.rs  child-await.rs  child-pipleline-test.rs  child-test.rs  collections_test.rs  colored_test.rs  copy_clone_test.rs  drop_test.rs  error_test.rs  ffi-test.rs  file-create-test.rs  file-open-test.rs  file-read-lines-test.rs  filesystem-operations-test.rs  fn_test.rs  function_test.rs  future_test.rs  hyper_test.rs  indicatif_test.rs  interg-lib_test.rs  iterator_test.rs  json_test.rs  lazy_static_test.rs  macro_test.rs  map-reduce-test.rs  mem_size_test.rs  message_test.rs  neural_network_test.rs  option_result.rs  ordering_test.rs  panic_unwinding.rs  parking_lot_test.rs  path-test.rs  pin_test.rs  (+19 more)
hello_cargo/tests/common/: mod.rs
minigrep/: Cargo.toml
minigrep/src/: main.rs
rust_blockchain/: Cargo.toml
rust_blockchain/src/: block.rs  blockchain.rs  main.rs
variables/src/: main.rs
