# 习题来自：https://google.github.io/comprehensive-rust/index.html
[package]
name = "comprehensive-rust"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
libc = "1.0.0-alpha"
reqwest = { version = "0.13.1", features = ["blocking"] }
scraper = "0.25.0"
thiserror = "2.0.18"
crossbeam-channel = "0.5.16"
futures = "0.3.33"
anyhow = "1.0.104"
tokio = { version = "1", features = ["rt", "macros"] }
