[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden = "0.1.0"

# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1"
#vim ~/.cargo/config
# [source.crates-io]
# replace-with = 'tuna'
# [source.tuna]
# registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
