[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden = "0.1.0"
sh = "0.2.1"
ascent = "*"
socketioxide = "*"
axum = "*"
tokio = { version = "*", features = ["rt-multi-thread"] }
message-io = { version = "0.18", default-features = false, features = ["tcp", "udp", "websocket"] }
serde_json = "1.0.115"
serde = "1.0.197"
chrono = "0.4.37"
lazy_static = "1.4.0"
rayon = "1.5.1"


# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1"
#vim ~/.cargo/config
# [source.crates-io]
# replace-with = 'tuna'
# [source.tuna]
# registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
