[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# garden = "0.1.0"
sh = "0.2.1"
ascent = "*"
socketioxide = "*"
axum = "*"
tokio = { version = "1.39.0", features = ["full"] }
# message-io = { version = "0.18", default-features = false, features = ["tcp", "udp", "websocket"] }
# message-io = "0.18"
serde_json = "1.0.115"
serde = "1.0.197"
chrono = "0.4.37"
lazy_static = "1.4.0"
rayon = "1.5.1"
indicatif = "0.17.9"
colored = "2.1.0"
regex = "1.11.1"
reqwest = "0.12.9"
futures = "0.3.31"
mio = "1.0.3"
bytes = "1.2"
hyper = { version = "1.5.2", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["full"] }
actix-web = "4.0.0"
polars = "0.45.1"

# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1"
#vim ~/.cargo/config
# [source.crates-io]
# replace-with = 'tuna'
# [source.tuna]
# registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
